syntax="proto3";
package Proto;

enum RequestType
{
  Get = 0;
  Set = 1;
  Del = 2;
}
